; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/block/extr_blk-throttle.c_throtl_update_blkio_group_write_bps.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/block/extr_blk-throttle.c_throtl_update_blkio_group_write_bps.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.blkio_group = type { i32 }
%struct.throtl_data = type { i32 }
%struct.throtl_grp = type { i32* }

@WRITE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, %struct.blkio_group*, i32)* @throtl_update_blkio_group_write_bps to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @throtl_update_blkio_group_write_bps(i8* %0, %struct.blkio_group* %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca %struct.blkio_group*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.throtl_data*, align 8
  %8 = alloca %struct.throtl_grp*, align 8
  store i8* %0, i8** %4, align 8
  store %struct.blkio_group* %1, %struct.blkio_group** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load i8*, i8** %4, align 8
  %10 = bitcast i8* %9 to %struct.throtl_data*
  store %struct.throtl_data* %10, %struct.throtl_data** %7, align 8
  %11 = load %struct.blkio_group*, %struct.blkio_group** %5, align 8
  %12 = call %struct.throtl_grp* @tg_of_blkg(%struct.blkio_group* %11)
  store %struct.throtl_grp* %12, %struct.throtl_grp** %8, align 8
  %13 = load i32, i32* %6, align 4
  %14 = load %struct.throtl_grp*, %struct.throtl_grp** %8, align 8
  %15 = getelementptr inbounds %struct.throtl_grp, %struct.throtl_grp* %14, i32 0, i32 0
  %16 = load i32*, i32** %15, align 8
  %17 = load i64, i64* @WRITE, align 8
  %18 = getelementptr inbounds i32, i32* %16, i64 %17
  store i32 %13, i32* %18, align 4
  %19 = load %struct.throtl_data*, %struct.throtl_data** %7, align 8
  %20 = load %struct.throtl_grp*, %struct.throtl_grp** %8, align 8
  %21 = call i32 @throtl_update_blkio_group_common(%struct.throtl_data* %19, %struct.throtl_grp* %20)
  ret void
}

declare dso_local %struct.throtl_grp* @tg_of_blkg(%struct.blkio_group*) #1

declare dso_local i32 @throtl_update_blkio_group_common(%struct.throtl_data*, %struct.throtl_grp*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
